Updated website layout and styles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My EC2 Hosted Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Welcome | My Static Website</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My EC2 Hosted Website</h1>
-    <p>This website is hosted on an EC2 instance with Apache.</p>
+  <header>
+    <h1>🌐 My Static Website</h1>
+    <p>Deployed on GitHub Pages & EC2</p>
+  </header>
+
+  <main>
+    <section class="about">
+      <h2>About This Site</h2>
+      <p>This is a simple static website built using HTML and CSS, and deployed for free using GitHub Pages. It’s also mirrored on an EC2 instance as part of a DevOps exercise.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Santhosh Reddy</p>
+  </footer>
 </body>
 </html>
+
